pkg/provider/kubernetes/ingress-nginx/fixtures/ingresses/ingress-with-default-backend-no-rules-auth-tls.yml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-with-default-backend-no-rules-auth-tls
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/auth-tls-secret: "default/ca-secret"

spec:
  ingressClassName: nginx
  defaultBackend:
    service:
      name: whoami
      port:
        number: 80
